--- a/p8105_hw6_tl3279.md
+++ b/p8105_hw6_tl3279.md
@@ -5,6 +5,10 @@ Tianqi Li
 
 ``` r
 library(tidyverse)
+library(modelr)
+library(mgcv)
+library(SemiPar)
+set.seed(1)
 ```
 
 ## Problem 1
@@ -58,7 +62,7 @@ boot_straps |>
   ylab("Frequency")
 ```
 
-![](p8105_hw6_tl3279_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+![](p8105_hw6_tl3279_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
 
 ``` r
 boot_straps |>
@@ -69,7 +73,7 @@ boot_straps |>
   ylab("Frequency")
 ```
 
-![](p8105_hw6_tl3279_files/figure-gfm/unnamed-chunk-4-2.png)<!-- -->
+![](p8105_hw6_tl3279_files/figure-gfm/unnamed-chunk-3-2.png)<!-- -->
 
 R-squared distributed between 0.87 to 0.94 with peak at about 0.915.  
 log distributed between about 1.90 to 2.10 with peak about 2.02.
@@ -87,7 +91,7 @@ boot_straps |>
     ## # A tibble: 1 × 4
     ##   r2_ci_ll r2_ci_ul log_ci_ll log_ci_ul
     ##      <dbl>    <dbl>     <dbl>     <dbl>
-    ## 1    0.894    0.927      1.97      2.06
+    ## 1    0.894    0.927      1.96      2.06
 
 ## Problem 2
 
@@ -158,18 +162,7 @@ city_tests <-
   ) |>
   filter(term == "victim_sexMale") |>
   select(city_state, OR, lower, upper)
-```
-
-    ## Warning: There were 45 warnings in `mutate()`.
-    ## The first warning was:
-    ## ℹ In argument: `results = map(fit, ~broom::tidy(.x, conf.int = TRUE, conf.level
-    ##   = 0.95))`.
-    ## ℹ In group 1: `city_state = "Albuquerque,NM"`.
-    ## Caused by warning:
-    ## ! glm.fit:拟合概率算出来是数值零或一
-    ## ℹ Run `dplyr::last_dplyr_warnings()` to see the 44 remaining warnings.
-
-``` r
+    
 city_tests |>
   knitr::kable(digits = 3)
 ```
@@ -228,7 +221,7 @@ Plot estimated ORs and CIs
 
 ``` r
 city_tests |>
-  ggplot(aes(x = reorder(city_state,OR), y = OR)) +
+  ggplot(aes(x = reorder(city_state,desc(OR)), y = OR)) +
   geom_point() +
   geom_errorbar(aes(ymin = lower, ymax = upper), width = 0.25, color = "darkgray") +
   labs(
@@ -239,4 +232,115 @@ city_tests |>
   theme_minimal()
 ```
 
-![](p8105_hw6_tl3279_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+![](p8105_hw6_tl3279_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
+## Problem 3
+
+Load the dataset and clean it
+
+``` r
+bw_df = 
+  read_csv("birthweight.csv") |>
+  janitor::clean_names() |>
+  mutate(
+    babysex = factor(babysex, levels = c(1, 2), 
+                     labels = c("Male", "Female")),
+    malform = factor(malform, levels = c(0, 1), 
+                     labels = c("Absent", "Present")),
+    frace = factor(frace, levels = c(1, 2, 3, 4, 8, 9), 
+                   labels = c("White", "Black", "Asian", "Puerto Rican", "Other", "Unknown")),
+    mrace = factor(mrace, levels = c(1, 2, 3, 4, 8), 
+                   labels = c("White", "Black", "Asian", "Puerto Rican", "Other"))
+  )
+```
+
+Modeling Process  
+Data Cleaning: Variable names were cleaned. Meaningful labels were
+created for factor variables (e.g., babysex, malform) rather than
+numbers. No missing values in the dataset.
+
+``` r
+bw_model = 
+  lm(
+  bwt ~ babysex + bhead + blength + fincome + frace + gaweeks + malform + momage  + ppbmi + smoken + wtgain, data = bw_df
+  )
+```
+
+Variables were chosen based on the hypothesized biological and
+socio-economic factors influencing birth weight. My proposed model for
+birthweight includes the following variables: babysex, bhead, blength,
+fincome, frace, gaweeks, malform, momage, ppbmi, smoken, wtgain.
+Variables like bhead, blength, and gaweeks directly measure or predict
+the baby’s growth, making them essential for modeling birth weight.
+Variables like fincome and frace provide insight into socio-economic
+factors that indirectly affect birthweight. Pre-pregnancy BMI, and
+weight gain during pregnancy are key indicators of maternal health and
+directly influence fetal growth.Previous complications increase the risk
+of similar outcomes. These variables are all predictive of birthweight.
+
+Plot residuals vs fitted values
+
+``` r
+bw_df =
+  bw_df |>
+  modelr::add_predictions(bw_model) |>
+  modelr::add_residuals(bw_model)
+bw_df |>
+  ggplot(aes(x = pred, y = resid)) +
+  geom_point() +
+  labs(
+    x = "Fitted Values",
+    y = "Residuals"
+  ) +
+  theme_minimal()
+```
+
+![](p8105_hw6_tl3279_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+
+Model comparison
+
+``` r
+cv_df = 
+  crossv_mc(bw_df, 100) |>
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble)
+  ) |>
+  mutate(
+    bw_mod = map(train, \(x) lm(bwt ~ babysex + bhead + blength + fincome + frace + gaweeks + malform + momage  + ppbmi + smoken + wtgain, data = x)),
+    model1 = map(train, \(x) lm(bwt ~ blength + gaweeks, data = x)),
+    model2 = map(train, \(x) lm(bwt ~ bhead * blength * babysex, data = x))
+  ) |>
+  mutate(
+    rmse_bw = map2_dbl(bw_mod, test, rmse),
+    rmse_1 = map2_dbl(model1, test, rmse),
+    rmse_2 = map2_dbl(model2, test, rmse)
+  )
+
+cv_df |>
+  select(starts_with("rmse")) |>
+  pivot_longer(
+    everything(),
+    names_to = "model",
+    values_to = "rmse",
+    names_prefix = "rmse_"
+  ) |>
+  ggplot(aes(x = model, y = rmse)) +
+  geom_violin()
+```
+
+![](p8105_hw6_tl3279_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
+Model 1 uses only blength and gaweeks as predictors and has the highest
+RMSE, indicating it is the least accurate among the three models. Only
+including two variables in the model likely to oversimplify the
+relationship.
+
+The interaction model performs better than Model 1, as shown by its
+lower RMSE. Including interactions between bhead, blength, and babysex
+adds complexity and captures additional variability in birthweight.
+
+The model proposed by myself has the lowest RMSE, suggesting consistent
+performance across cross-validation folds. It performs best likely
+because it incorporates a mix of biological, maternal, and socioeconomic
+predictors.
